WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
226528
AX: macOS WebContent can't read prefs from com.apple.Accessibility
https://bugs.webkit.org/show_bug.cgi?id=226528
Summary
AX: macOS WebContent can't read prefs from com.apple.Accessibility
chris fleizach
Reported
2021-06-02 01:18:36 PDT
There are some preferences stored in com.apple.Accessibility that are required to be read and updated on macOS <
rdar://problem/78752387
>
Attachments
patch`
(1.87 KB, patch)
2021-06-02 01:20 PDT
,
chris fleizach
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(1.86 KB, patch)
2021-06-02 09:53 PDT
,
chris fleizach
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(2.34 KB, patch)
2021-06-02 10:31 PDT
,
chris fleizach
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2021-06-02 01:20:03 PDT
Created
attachment 430325
[details]
patch`
chris fleizach
Comment 2
2021-06-02 09:53:49 PDT
Created
attachment 430369
[details]
Patch
chris fleizach
Comment 3
2021-06-02 10:31:13 PDT
Created
attachment 430373
[details]
Patch
Per Arne Vollan
Comment 4
2021-06-03 10:55:55 PDT
Comment on
attachment 430373
[details]
Patch R=me.
EWS
Comment 5
2021-06-03 11:04:36 PDT
Committed
r278412
(
238437@main
): <
https://commits.webkit.org/238437@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 430373
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug