AX: macOS WebContent can't read prefs from com.apple.Accessibility https://bugs.webkit.org/show_bug.cgi?id=226528

Reviewed by Per Arne Vollan.

Some accessibility preferences on macOS use libAccessibility.
WebContent should process these on iOS & macOS.

* WebProcess/cocoa/WebProcessCocoa.mm:
(WebKit::setPreferenceValue):


Canonical link: https://commits.webkit.org/238437@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@278412 268f45cc-cd09-0410-ab3c-d52691b4dbfc